# asd_prediction

./: .gitignore  Dockerfile  README.md  pyproject.toml
.k8s/: cluster-autoscaler-autodiscover.yaml  deployment-copy.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  persistent-volume.yaml  service.yaml
dev/: evaluation_model.py  s3_image_loader.py
src/: main.py  models.py
